<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Energyzer</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="text_servicename">Service Name:</string>
    <string name="text_localip">Local IP:</string>
    <string name="text_exturl">External URL:</string>
    <string name="text_user">User:</string>
    <string name="text_password">Password:</string>
    <string name="button_next">Next</string>
    <string name="button_login">Log In</string>
    <string name="title_activity_einrichtung">Einrichtung</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_homescreen">Homescreen</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_raeume">Räume</string>

</resources>
