<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_user"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textedit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_user"
        android:layout_below="@+id/text_user"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textedit_user"
        android:layout_below="@+id/textedit_user"
        android:layout_marginTop="46dp"
        android:text="@string/text_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_password"
        android:layout_below="@+id/text_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edittext_password"
        android:layout_below="@+id/edittext_password"
        android:layout_marginTop="50dp"
        android:text="@string/button_login" />

</RelativeLayout>
